update home page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackersguild",
-  "homepage": "https://hackersguild.github.io/hackersguild/",
+  "homepage": "https://hackersguild.org",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
